# TraceMind

./: .gitignore  docker-compose.yml  pyproject.toml  test_psycopg.py
app/: main.py  test_tracer.py
app/api/routers/: health.py  workflow.py
app/core/: config.py
app/database/: dependencies.py  session.py
app/enums/: workflow.py
app/graph/: nodes.py  state.py  workflow_graph.py
app/llm/: gemini.py
app/models/: workflow.py
app/repositories/: workflow_repository.py
app/schemas/: workflow.py
app/services/: execution_service.py  health_service.py  runtime_context_services.py  workflow_service.py
app/tasks/: workflow_tasks.py
app/telemetry/: context.py  tracer.py
app/worker/: celery_app.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Logo.tsx
frontend/src/components/layout/: AppShell.tsx  MobileSidebar.tsx  PageContainer.tsx  Sidebar.tsx  SidebarItem.tsx
frontend/src/constants/: navigation.ts
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/History/: History.tsx
frontend/src/pages/Investigation/: Investigation.tsx
frontend/src/router/: index.tsx
frontend/src/styles/: theme.css
migrations/: env.py
migrations/versions/: 3c640c4135e0_create_workflows_table.py  52b0fbd485b0_add_workflow_execution_fields.py
tests/: test_connection.py  test_gemini.py
