[project]
name = "tracemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "mypy>=2.1.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-instrumentation-celery>=0.64b0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "psutil>=7.2.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]
